scrollbar fix 0.3

--- a/css/partials/_globalStyle.scss
+++ b/css/partials/_globalStyle.scss
@@ -34,7 +34,7 @@ body {
     ),
     url(../img/fondoPagina.jpeg);
   background-position: top;
-  background-size: cover;
+  background-size: 100vh
   background-attachment: fixed;
 }
 
